<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/rounded_gr"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="7dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_br"
                android:maxWidth="500dp"
                android:padding="5dp"
                android:text="@string/aya1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_br"
                android:maxWidth="500dp"
                android:padding="5dp"
                android:text="@string/aya2"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_br"
                android:maxWidth="500dp"
                android:padding="5dp"
                android:text="@string/aya3"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_br"
                android:maxWidth="500dp"
                android:padding="5dp"
                android:text="@string/aya4"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_br"
                android:maxWidth="500dp"
                android:padding="5dp"
                android:text="@string/doaa1s"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_br"
                android:maxWidth="500dp"
                android:padding="5dp"
                android:text="@string/doaa2s"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_br"
                android:maxWidth="500dp"
                android:padding="5dp"
                android:text="@string/doaa3"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_br"
                android:maxWidth="500dp"
                android:padding="5dp"
                android:text="@string/doaa4s"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_br"
                android:maxWidth="500dp"
                android:padding="5dp"
                android:text="@string/doaa5s"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_br"
                android:maxWidth="500dp"
                android:padding="5dp"
                android:text="@string/doaa6"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_br"
                android:maxWidth="500dp"
                android:padding="5dp"
                android:text="@string/doaa7"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_br"
                android:maxWidth="500dp"
                android:padding="5dp"
                android:text="@string/doaa8"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_br"
                android:maxWidth="500dp"
                android:padding="5dp"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_br"
                android:maxWidth="500dp"
                android:padding="5dp"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>